# lg-file-cpp

./: .gitignore  CMakeLists.txt  main.cpp
